# rust-telegram-api-consumer

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.docker/: dockerfile
local/: consumers.db
migrations/2022-08-22-142143_create_consumers/: down.sql  up.sql
src/: main.rs  schema.rs
src/app/: app.rs  bot.rs  mod.rs  task.rs
src/app/api/: mod.rs  vehicle_message.rs  vfs.rs
src/app/api/enums/: route.rs
src/app/api/models/: api_config.rs  api_runtime.rs  auth_credentials.rs  mod.rs  token.rs
src/app/api/types/: mod.rs
src/app/auth/helpers/: check_login.rs  mod.rs
src/app/db/: connection.rs  mod.rs
src/app/db/dao/: consumers.rs  mod.rs
src/app/db/dto/: consumer.rs  create_consumer.rs  mod.rs
src/app/db/types/: mod.rs
src/app/handlers/: mod.rs  types.rs
src/app/handlers/admin/: command.rs  handler.rs  mod.rs  service.rs
src/app/handlers/common/: command.rs  handler.rs  mod.rs  service.rs
src/app/handlers/default/: handler.rs  mod.rs
src/app/models/: config.rs  credentials.rs  mod.rs
src/shared/: constants.rs  mod.rs
src/shared/enums/: env.rs  locales.rs  mod.rs
src/shared/utils/: utils.rs
