[package]
name = "vehicle-message-telegram-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["full"] }

tokio = { version =  "1.17", features = ["full"] }
tokio-stream = "0.1.8"
async-recursion = "0.3.2"
async-trait = "0.1.52"

diesel = { version = "2.0.0-rc.1", features = ["sqlite", "r2d2", "chrono"] }
r2d2 = "*"
r2d2_sqlite = "*"

thirtyfour = "0.30.0"

reqwest = "0.11.11"
serde = "1.0.136"
serde_json = "1.0.83"
url = "2.2.2"

strum = "0.24.0"
strum_macros = "0.24"

unic-langid = "0.9"
fluent-bundle = "0.15.2"
fluent-langneg = "0.13.0"
fluent-templates = "0.6.1"

pretty_env_logger = "0.4.0"
log = "0.4"
dotenv = "0.15.0"
once_cell = "1.9.0"
regex = "1.5.4"
chrono = "0.4.21"
clokwerk = "0.4.0-rc1"
